Upgraded Spring-data and Mongo driver to latest versions
Adapted overall code consequently